cc: Remove DCHECK for invalid image

This appears to happen sometimes due to render process shutdown racing
with drawing a frame using software resources from that renderer.
Previously this wouldn't DCHECK at all and would just early out.

BUG=626203,chromedriver:1418
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review-Url: https://codereview.chromium.org/2132723002
Cr-Commit-Position: refs/heads/master@{#404251}

Former-commit-id: 011f68cd2fa0d9fff7fd9808043d6a7fae6e478c